--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<title></title>
 </head>
 <body>
-
+	<div></div>
 
 <div class="stick" style="left: 30%;"></div>
 <div class="stick" style="left: 70%;"></div>
